Freedom Sanbox Ant Deploy/src/objects/Question_Option_List__c.object
<CustomObject>
    <description>This will store the options for each question in the pool,  the score to be given and the feedback to be displayed.</description>
    <fields>
        <fullName>Explaination__c</fullName>
        <label>Explaination</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_to_be_displayed__c</fullName>
        <label>Feedback to be displayed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Bank_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank List</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>Question Option Lists</relationshipLabel>
        <relationshipName>Question_Option_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Question Option List</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IP00000000P61MAE_00NP0000000eAMYMA2</fullName>
        <active>true</active>
        <field>Related_Questions_To_Analysis__c.Option__c</field>
        <filterItems>
            <field>Question_Option_List__c.Question_Bank_List__c</field>
            <operation>equals</operation>
            <valueField>$Source.Question_Master__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Related Questions To Analysis_Option</name>
        <sourceObject>Related_Questions_To_Analysis__c</sourceObject>
    </namedFilters>
    <pluralLabel>Question Option Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>